--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
